includedir = @includedir@/gephex/TestFramework
libdir = @libdir@/gephex

lib_LTLIBRARIES = libtestframework.la

libtestframework_la_SOURCES = \
		CompositeTest.cpp \
		LeafTest.cpp \
		Tester.cpp \
		easytest.cpp \
		easytest.h


include_HEADERS = \
		CompositeTest.h \
		easytest.h \
		LeafTest.h \
		Tester.h \
		Test.h

libtestframework_la_LDFLAGS = -avoid-version

